# llm-analyser

./: .env.example  .gitignore  .pre-commit-config.yaml  README.ja.md  README.md  claude.md  llman.local.toml.example  llmap.local.toml.example  main.py  pplyz.local.toml  pplyz.local.toml.example  pyproject.toml  pytest.ini
llm_analyser/: config.py  llm_client.py  processor.py  schemas.py
llman/: cli.py  config.py  llm_client.py  processor.py  settings.py
llmap/: cli.py  config.py  llm_client.py  settings.py
pplyz/: cli.py  config.py  settings.py
tests/: __init__.py  conftest.py  test_config.py  test_llm_client.py  test_main.py  test_processor.py  test_settings.py
tests/fixtures/: sample.csv
