[project]
name = "llm-analyser"
version = "0.2.0"
description = "LLM-powered CSV data analyzer with structured output generation using LiteLLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.0.0",
    "pandas>=2.2.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]
