[project]
name = "llm-analyser"
version = "0.2.0"
description = "LLM-powered CSV data analyzer with structured output generation using LiteLLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.0.0",
    "pandas>=2.2.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.0.0",
    "ruff>=0.8.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.2",
]
